# 07_esp32_heat_Pid

./: .gitignore  BOM_Board1_PCB1_2025-08-31.xlsx  CMakeLists.txt  GPT.txt  LCEDA.url  LICENSE  README.md  pcb_line.diy  pic.vsdx  sdkconfig  ~$$pic.~vsdx
.claude/: 20250930.md  experence.md
ASSET/: pic.vsdx
Hardware/: adc_shared.c  adc_shared.h  battery_monitor.c  battery_monitor.h  buzzer.c  buzzer.h  display.c  display.h  key.c  key.h  relay.c  relay.h  rgb.c  rgb.h  temperature.c  temperature.h  uart.c  uart.h
Test/: hardware_test.c  hardware_test.h
Web_APP/: index.html
main/: CMakeLists.txt  CMakeLists_full.txt  CMakeLists_simple.txt  advanced_battery_calculation.h  battery_monitor.c  battery_monitor.h  buzzer.c  buzzer.h  display.c  display.h  input.c  input.h  main.c  pid_controller.c  pid_controller.h  rgb.c  rgb.h  simple_battery_test.c  temperature.c  temperature.h  uart.c  uart.h  voltage_monitor_readme.h  web_server.c  web_server.h
